terraform_code1/V2-EC2.tf
provider "aws" {
    region = "us-east-1"
}

resource "aws_instance" "demo-server"{

    ami = "ami-0182f373e66f89c85"
    instance_type = "t2.micro"
    key_name = "ddp"
    security_groups=["demo-sg"]

}

resource "aws_security_group" "demo-sg" {
    name="demo-sg"
    description="Allow SSH traffic"
    

ingress{
    description ="ssh access"
    from_port=22
    to_port=22
    protocol="tcp"
    cidr_blocks=["0.0.0.0/0"]
}

egress{
    from_port=0
    to_port=0
    protocol="-1"
    cidr_blocks=["0.0.0.0/0"]
}

tags ={
    Name ="ssh-port"
}

}
